--- a/index.html
+++ b/index.html
@@ -4,10 +4,82 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link type="image/x-icon" rel="shortcut icon" href="фавиконка/Vector.svg">
+
+	<style>
+		li {
+          	display: flex;
+		  }
+	</style>		
 </head>
 <body>
 	<header>
 		<style>
+			.order{
+	padding-top: 100px;
+}
+
+.order-inner{
+	display:flex;
+	justify-content: space-between;
+}
+
+.card--subtitle{
+	max-width: 260px;
+}
+
+.card--button{
+	width: 160px;
+	height: 50px;
+	border:none;
+	border-radius: 4px;
+	background-color: #FB565A;
+	color:#fff;
+	text-transform: uppercase;
+	font-weight: 400;
+	font-size: 16px;
+	transition: 0.3s ease;
+}
+
+.card--button:active{
+	transform: scale(0.98);
+}
+
+.web:hover{
+	background-color: #E74246;
+
+}
+
+.web:active{
+	background-color: #D7373B;
+
+}
+
+.app{
+	background-color: #OOCA74;
+
+}
+
+.app:active{
+	background-color: #OOAA62;
+
+}
+
+.prez{
+	background-color: #EFC849;
+
+}
+
+.prez:hover{
+	background-color: #EAB534;
+
+}
+
+.prez:active{
+	background-color: #E5A722;
+
+}
+
         	.center-text{
         		text-align: center;
         	}
@@ -29,40 +101,52 @@
 	</nav>
 <main>
 	<section>
-		<h1>Долго, дорого,<p>скурпулёзно</p></h1>
+		<h1>Долго, дорого,<p>скурпулёзно</p></h1> 
+		<img src="nerds-index-slide1 1.jpg" width="300" height="200">
+
 		 <ul>
+
 		<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-		 </ul>
+		 
+         <section class="order">
+		<div class="wrapper">
+		<div class="order-inner">
+		<div class="website">
+		<img src="illustration-1 1.jpg"alt="">
+		<div class="card--info">
+		<h1 class = "card--title">Веб-сайты</h1>
+		<p class="card--subtitle">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+		<button class="card--button web">Заказать</button>
+		</div>
+		</div>
+		<div class = "application">
+		<img src="illustration-2 1.jpg"alt="">
+		<div class="card--info">
+		<h1 class = "card--title">Приложения</h1>
+		<p class="card--subtitle">Покорите топ-10 приложений в AppStore и Google Play</p>
+		<button class="card--button app">Заказать</button>
+		</div>
+		</div>
+		<div class = "presentation">
+		<img src="illustration-3 1.jpg"alt="">
+		<div class="card--info">
+		<h1 class = "card--title">Презентации</h1>
+		<p class="card--subtitle">Вы даже не подозреваете,насколько вы изумительны!</p>
+		<button class="card--button prez">Заказать</button>
+		</div>
+		</div>
+		</div>
+		</div>
 	</section>
 	<section>
-		<h1>Услуги</h1>
-		<ul>
-		<p>Авторские туры по Фарерам</p> 
-		<img src="original.jpg" width="300" height="200"> <img src="Tindholmur_7Mb.jpg"width="300" height="200"> <img src="755216431690832.jpg"width="300" height="200">
-		<p>Бронирование билетов на мероприятия</p>
-		<img src="farel-021.jpg" width="300" height="200"> <img src="0_cc1db_c185ecc6_ori.jpg" width="300" height="200"> <img src="csm_359015864_650529537011248_4559932080733729619_n_672b4dfbb0.jpg" width="300" height="200">
-		<p>Трансфер в аэропорт</p>
-		<img src="l-3VPXXlX0onEZjpYbG2Jzm3XBwkHE8pLLC2EXIeUU.jpg" width="300" height="200"> <img src="1.jpg" width="300" height="200"> <img src="c6e23fd6f8620639cc871870377b4752.jpg" width="300" height="200">
-	    </ul>
-    </section>
-    <section>
-		<h1>Контакты</h1>
-		<ul>
-		<p>телефон: 88005553535</p>
-		</ul>
-		<h1>Где нас найти</h1>
-		<ul>
-        <p>Адрес: г.Сочи ул.Есенина д.Каруселено 6</p>
-	    <ul>
-        </section>
-        <footer>
-        <section>
-        	<h2>Давайте дружить!</h2>
-        	<ul>
-        		<li><a href="#">instagram: farery_ostrova</a></li>
-        		<li><a href="#">Вконтакте</a></li>
-        		<li><a href="#">Фейсбук</a></li>
-        		<li><a href="#">WhatsApp</a></li>
+		<h2>Мы — маленькая, но гордая  <p>дизайн-студия из Краснодара.</p></h2>
+		
+	</section>
+
+
+
+	</section>
+	
         </section>
     </footer>
 </main>
