--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +12,10 @@
 		  }
 	</style>		
 </head>
-<body>
-	<header>
+<body class="page-body">
+	<header class="main-header">
+		<nav class="main-navigation">
+    <a class="main-header-logo">
 		<style>
 			.order{
 	padding-top: 100px;
@@ -139,8 +141,20 @@
 		</div>
 	</section>
 	<section>
-		<h2>Мы — маленькая, но гордая  <p>дизайн-студия из Краснодара.</p></h2>
-		
+		<h2>Мы — маленькая, но гордая <p>дизайн-студия из Краснодара.</p></h2>
+		<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет</p> 
+			<p>превыше креатива. Работаем не покладая рук, как роботы.</p>
+		<h3>Выполняем заказы на разработку:</h3>
+		<ul>	<p class="webb">Веб-сайтов любой сложности</p></ul>
+
+		<ul>    <p class="mobile">Мобильных приложений для iOS и Android</p></ul>  
+
+		<ul>    <p class="slaidsnow">Слайдшоу и видео для корпоративных презентаций</p></ul>
+
+		<img src="nerds-illustration 1.jpg"alt="">
+		<h3>с 2004 года Любим точность во всем:</h3>
+		<h2>146%</h2>
+		<p>Уровень</p><p>самоотдачи</p>
 	</section>
 
 
